[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cbz_convertor"
dynamic = ["version"]
description = "A tool to regroup and rename CBZ files for e-readers."
authors = [
    { name = "Pierre Perick", email = "pierre.perick@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "argparse; python_version<'3.10'",
    "tqdm"
]

[project.scripts]
cbz-convertor = "cbz_convertor.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cbz_convertor*"]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "cbz_convertor/_version.py"
versionfile_build = "cbz_convertor/_version.py"
tag_prefix = "v"
parentdir_prefix = "cbz_convertor-"
